Period and alignment fix

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  text-align: center;
 }
 
 html {
@@ -59,7 +60,8 @@ body {
   color: var(--main-color);
 }
 
-.title__text__accent {
+.title__text::after {
+  content: '.';
   color: var(--secondary-color);
   font-weight: 800;
 }
